z-index issue fixed

--- a/css/layout.css
+++ b/css/layout.css
@@ -20,6 +20,7 @@
   font-size: 12px;
   line-height: 18px;
   margin: 5px;
+  cursor: pointer;
   box-shadow: 0px 0px 21px 0px rgba(0, 0, 0, 0.07);
   transition: all 0.2s;
 }
@@ -54,12 +55,12 @@
 .header-wrapper{
   background-color: #1c1d1d;
   position: relative;
+  overflow-x: hidden;
 }
 
 .header-wrapper .header{
   margin: 0px auto;
   position: relative;
-
   padding: 30px 15px;
   z-index: 9;
 }
@@ -224,11 +225,12 @@
 
 .header-wrapper .header-bg-images{
   position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
+  top: 50%;
+  left: 50%;
+  width: 90em;
   height: 100%;
   display: block;
+  transform: translate(-50%, -50%);
 }
 
 .header-banner .btn-container .btn{
@@ -270,6 +272,7 @@
   background-repeat: no-repeat;
   display: none;
   background-size: 10px 10px;
+  cursor: pointer;
 }
 
 .media-btn.shown{
@@ -326,6 +329,7 @@
 .stats-section-wrapper{
   background: url("../images/gradient_bg_01.png") no-repeat;
   background-position: center bottom;
+  background-size: 100%;
 }
 
 .stats-section-wrapper .counter-container{
@@ -359,6 +363,7 @@
   position: relative;
   background: url("../images/gradient_bg_02.png") no-repeat bottom;
   background-position: center bottom;
+  background-size: 100%;
 }
 
 .conf-speakers-section{
@@ -420,7 +425,7 @@
   background: url("../images/speaker_overlay_bg.png") no-repeat;
   background-position: bottom left;
   background-size: 100% 100%;
-  z-index: 9;
+  z-index: 1;
 }
 
 .speaker-cont .intro{
@@ -428,7 +433,7 @@
   bottom: 33px;
   left: 0px;
   padding: 0px 33px;
-  z-index: 10;
+  z-index: 3;
   text-align: left;
 }
 
@@ -455,7 +460,7 @@
   left: 0px;
   background: #F0474A;
   opacity: 0;
-  z-index: 9;
+  z-index: 2;
   transition: all .2s;
 }
 
@@ -801,13 +806,13 @@
   left: 0px;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 1;
 }
 
 .location-contact-section-wrapper .contact-section{
   max-width: 90em;
   margin: 0px auto;
-  z-index: 9;
+  z-index: 2;
   position: relative;
 }
 
